--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Global */
 :root {
   /* Color */
-  --color-black: #191c1c;
+  --color-black: #00322f;
   --color-grey: #6f7977;
   --color-light-grey: #dae5e2;
   --color-bluegrey: #47617a;
@@ -12,11 +12,11 @@
   --color-yellow: #fad05c;
 
   /* Font size */
-  --font-large: 48px;
-  --font-medium: 28px;
-  --font-regular: 18px;
-  --font-small: 16px;
-  --font-micro: 14px;
+  --font-large: 50px;
+  --font-medium: 30px;
+  --font-regular: 20px;
+  --font-small: 18px;
+  --font-micro: 16px;
 
   /* Font weight */
   --weight-bold: 700;
@@ -32,22 +32,48 @@
 
 /*Global Tag*/
 body {
-  font-family: 'Yeon Sung', cursive;
+  font-family: 'Jua', sans-serif;
   margin: 0;
-  font-size: var(--font-regular);
+  font-size: var(--font-small);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: var(--color-black);
 }
 
 ul {
-  margin: 0;
+  margin: 10px 0;
   padding: 0;
 }
 
+li {
+  margin-bottom: 5px;
+  list-style: inside;
+}
+h2 {
+  margin: 5px 0;
+  font-size: var(--font-medium);
+}
 h3 {
-  margin: 0;
+  margin: 5px 0;
+  font-size: var(--font-regular);
+}
+
+button {
+  background-color: var(--color-green);
+  color: var(--color-white);
+  padding: 0;
+  border: 2px solid var(--color-green);
+}
+button:hover {
+  background-color: var(--color-white);
+  color: var(--color-green);
+  transition: var(--animation-duration);
 }
 
 /* Title */
 #title {
+  width: 100%;
   background-image: url(./images/title-background.png);
   background-color: #63bfb6;
   text-align: center;
@@ -58,14 +84,14 @@ h3 {
 
 /* Main */
 #main {
-  background-color: var(--color-light-grey);
   width: 80%;
   margin: 50px;
   padding: 10px;
+  padding-bottom: 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid var(--color-grey);
+  border: 2px solid var(--color-green);
   border-radius: var(--size-border-radius);
 }
 
@@ -74,14 +100,68 @@ h3 {
   text-align: center;
 }
 
+.help {
+  position: relative;
+  align-self: flex-end;
+}
+
 .main__help-btn {
-  font-size: var(--font-micro);
-  padding: 5px;
-  border: 1px solid var(--color-grey);
-  border-radius: 100%;
+  font-size: 10px;
+  height: 25px;
+  width: 25px;
+  font-size: 13px;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.main__help-dialog {
+  background-color: var(--color-bluegrey);
+  color: var(--color-white);
+  font-size: 15px;
+  width: 630%;
+  margin: 5px;
+  padding: 10px;
+  position: absolute;
+  left: -155px;
+  text-align: left;
+  border: none;
+  border-radius: 10px;
+}
+
+.main__help-dialog.close {
+  display: none;
+}
+
+.main__help-dialog li {
+  list-style: decimal inside;
+}
+
+.main__upload-btn {
+  width: 30%;
+  font-family: 'Jua', sans-serif;
+  font-size: 25px;
+  margin-bottom: 15px;
+  padding: 10px;
+  border-radius: var(--size-border-radius);
+}
+
+.main__drop-box {
+  color: var(--color-green);
+}
+
+.main__drop-txt {
+  font-size: 25px;
+  margin: 10px;
 }
 
 /* Rules */
 #rules {
-  background-color: lightgreen;
+  width: 83%;
+  display: flex;
+  flex-direction: column;
+  color: var(--color-black);
+}
+
+#rules span {
+  display: block;
 }
